[package]
name = "dd-unqueried-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
csv = "1.2.1"
regex = "1.8.1"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
structopt = "0.3.26"
tokio = { version = "1.28.0", features = ["full"] }
